--- a/jewellery-frontend/index.html
+++ b/jewellery-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/image-removebg-preview (2).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Jewellery Master</title>
+    <title>AS Jewellers</title>
   </head>
   <body class="h-full">
     <div id="root"></div>
