--- a/jewellery-frontend/index.html
+++ b/jewellery-frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/image-removebg-preview (2).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AS Jewellers</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body class="h-full">
     <div id="root"></div>
